--- a/PersonalWebsite/PersonalWebsite/PersonalWebsite.csproj
+++ b/PersonalWebsite/PersonalWebsite/PersonalWebsite.csproj
@@ -193,6 +193,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Projects.cshtml" />
+    <Content Include="Views\Home\Skills.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
